Name:                safecopy
Version:             0.10.4.2
x-revision:          12
Synopsis:            Binary serialization with version control.
Description:         An extension to Data.Serialize with built-in version control.
Homepage:            https://github.com/acid-state/safecopy
License:             PublicDomain
Author:              David Himmelstrup, Felipe Lessa
Maintainer:          Lemmih <lemmih@gmail.com>, David Fox <dsf@seereason.com>
-- Copyright:
Category:            Data, Parsing
Build-type:          Simple
Extra-source-files:  CHANGELOG.md
Cabal-version:       >=1.10

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Source-repository head
  type:          git
  location:      https://github.com/acid-state/safecopy.git


Library
  Default-language:    Haskell2010
  Exposed-modules:     Data.SafeCopy
                       Data.SafeCopy.Internal

  Hs-Source-Dirs:      src/

  -- Lower bounds are chosen to match LTS 7.24 (GHC 8.0)
  Build-depends:       base             >= 4.9       && < 5
                     , array            >= 0.5.1.1   && < 0.6
                     , cereal           >= 0.5.4.0   && < 0.6
                     , bytestring       >= 0.10.8.1  && < 0.13
                     , generic-data     >= 0.3.0.0   && < 2
                     , containers       >= 0.5.7.1   && < 1
                     , old-time         >= 1.1.0.3   && < 1.2
                     , template-haskell >= 2.11.0.0  && < 2.25
                     , text             >= 1.2.2.2   && < 1.3 || >= 2.0 && < 2.2
                     , time             >= 1.6.0.1   && < 2
                     , transformers     >= 0.5.2.0   && < 0.7
                     , vector           >= 0.11.0.0  && < 0.14

  Other-modules:       Data.SafeCopy.Instances
                       Data.SafeCopy.SafeCopy
                       Data.SafeCopy.Derive

  GHC-Options:         -Wall

  cpp-options: -DDEFAULT_SIGNATURES -DSAFE_HASKELL

Test-suite instances
  Default-language:    Haskell2010
  Type:                exitcode-stdio-1.0
  Main-is:             instances.hs
  Hs-Source-Dirs:      test/
  GHC-Options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Build-depends:       base
                     , array
                     , cereal
                     , containers
                     , safecopy
                     , template-haskell
                     , time
                     , vector
                     -- new dependencies:
                     , lens >= 4.7 && < 6
                     , lens-action
                     , tasty
                     , tasty-quickcheck
                     , quickcheck-instances
                     , QuickCheck >= 2.8.2 && < 3

Test-suite generic
  Default-language:    Haskell2010
  Type:                exitcode-stdio-1.0
  Main-is:             generic.hs
  Hs-Source-Dirs:      test/
  GHC-Options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  Build-depends:       base
                     , bytestring
                     , cereal
                     , safecopy
                     , HUnit
